api/crates/postgres/tests/integration/tags/snapshots/integration__tags__fetch_by_name_or_alias_like____test_context_wrapped_empty_succeeds.snap
---
source: crates/postgres/tests/integration/tags/fetch_by_name_or_alias_like.rs
expression: ctx.queries()
---
queries = []
